fixed not 1:1 logo at 768, fixed top 2 beige cards overflowing into hero section at 1024

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ body h1, h2, p {
 @media only screen and (min-width: 768px) {
 
     #mobile-logo {
-        height: 150px;
+        /* height: 150px; */
         margin-left: 100px;
     }
 
@@ -174,6 +174,7 @@ body h1, h2, p {
     #hero {
         padding-top: 20vh;
         height: 70vh;
+        min-height: 650px;
     }
 
     #home-h {
@@ -213,6 +214,7 @@ body h1, h2, p {
 
     #hero-section {
         height: 81.4vh;
+        min-height: 750px;
     }
 
     #home-h {
